Sun Mar 08 09:16:36 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* ChangeLog,flax/__init__.py,flax/searchserver/__init__.py,
	  flax/searchserver/application.py,search_server.py: Some initial
	  code - not yet functional.