@@ -1,3 +1,10 @@
+Thu Mar 12 16:30:20 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* flax/searchserver/application.py,flax/searchserver/settings.py,
+	  flax/searchserver/version.py,runserver.py: Move all methods into
+	  a new SearchServer class, and make the application from an
+	  instance of this class.  Add various other bits.
+
 Sun Mar 08 09:16:36 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* ChangeLog,flax/__init__.py,flax/searchserver/__init__.py,
